--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -33,6 +33,25 @@
   margin: 0;
 }
 
+html {
+  height: 100%;
+}
+
+#root {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: 100%;
+}
+
+body {
+  height: 100%;
+}
+
 .test-lato-mojno {
   font-family: lato;
   font-weight: 700;
@@ -118,6 +137,11 @@
           align-items: flex-end;
 }
 
+.header-page-top-logo:active {
+  -webkit-transform: scale(1.035);
+          transform: scale(1.035);
+}
+
 .header-top-btn-search {
   margin: 0 0 0 41px;
 }
@@ -146,6 +170,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding: 0 16px 0 0;
 }
 
 .header-preview-img-man {
@@ -262,6 +287,49 @@
   padding: 65px 0 0 0;
 }
 
+.content-notfound {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 16px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.content-notfound-wrp {
+  width: 100%;
+  max-width: 1140px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: calc(100vh - 160px);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 460px;
+}
+
 .content-cart {
   width: 100%;
   padding: 96px 0 0 0;
@@ -335,22 +403,22 @@
 }
 
 .category-item:first-child {
-  background-image: url(../../img/.jpg/cetegory_for_woman.jpg);
+  background-image: url(../../img/.jpg/categories/cetegory_women.jpg);
 }
 
 .category-item:nth-child(2) {
-  background-image: url(../../img/.jpg/cetegory_for_man.jpg);
+  background-image: url(../../img/.jpg/categories/cetegory_men.jpg);
 }
 
 .category-item:nth-child(3) {
-  background-image: url(../../img/.jpg/cetegory_for_kids.jpg);
+  background-image: url(../../img/.jpg/categories/cetegory_kids.jpg);
 }
 
 .category-item:last-child {
   width: 100%;
   height: 180px;
   max-width: 100%;
-  background-image: url(../../img/.jpg/cetegory_accesories.jpg);
+  background-image: url(../../img/.jpg/categories/cetegory_accesories.jpg);
   background-size: cover;
   margin: 30px 0 0 0;
 }
@@ -572,11 +640,11 @@
 }
 
 .products-item-price {
-  font-weight: bold;
-  font-family: sans-serif;
+  font-family: lato, sans-serif;
+  font-weight: 400;
   font-style: normal;
-  font-weight: normal;
-  font-size: 18px;
+  font-family: sans-serif;
+  font-size: 16px;
   line-height: 19px;
   color: #f16d7f;
 }
@@ -1606,7 +1674,7 @@
   height: 10px;
   color: red;
   width: 17px;
-  background-image: url(../../img/.png/account_enterdaw.png);
+  background-image: url(../../img/.svg/account_enterdaw.svg);
   background-size: cover;
   position: absolute;
   top: 18px;
@@ -1731,7 +1799,7 @@
   display: block;
   height: 16px;
   width: 20px;
-  background-image: url(../../img/.png/account_checkdaw.png);
+  background-image: url(../../img/.svg/account_checkdaw.svg);
   background-size: cover;
   position: absolute;
   top: 6px;
@@ -1768,6 +1836,8 @@
   line-height: 19px;
   color: #fbfbfb;
   text-align: center;
+  margin: 0 10px 0 0;
+  white-space: nowrap;
 }
 
 .footer-page-social {
@@ -1804,6 +1874,69 @@
 .footer-page-social-item:active {
   fill: #fff;
   background-color: #f16d7f;
+}
+
+.notfound-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.notfound-title {
+  font-family: lato, sans-serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 60px;
+  color: #4f8cff;
+  margin: 20px 0 0 0;
+}
+
+.notfound-ways-return {
+  margin: 20px 0 60px 0;
+}
+
+.notfound-ways-return-list {
+  font-family: lato, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: none;
+  height: 23px;
+}
+
+.notfound-ways-return-list-item {
+  margin: 0 55px 0 0;
+  font-size: 20px;
+  color: #769de7;
+  cursor: pointer;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-decoration: none;
+  height: 23px;
+}
+
+.notfound-ways-return-list-item:last-child {
+  margin: 0;
+}
+
+.notfound-ways-return-list-item:hover {
+  -webkit-transform: scale(1.035);
+          transform: scale(1.035);
+  border-bottom: 2px solid #769de7;
+}
+
+.notfound-img {
+  height: auto;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -2013,8 +2146,11 @@
   .content-cart-wrp {
     padding: 0px 8px;
   }
-  .content--account {
+  .content-account {
     width: 100%;
+  }
+  .content-notfound-wrp {
+    height: calc(100vh - 210px);
   }
   .header-page-product-bottom-wrp {
     -webkit-box-pack: center;
@@ -2137,6 +2273,19 @@
   }
   .others-products-wrap > .products-item:nth-child(2) {
     margin: 30px 0 0 0;
+  }
+  .notfound-ways-return {
+    margin: 40px 0 0 0;
+  }
+  .notfound-ways-return-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    text-align: center;
+  }
+  .notfound-ways-return-list-item {
+    margin: 0 0 20px 0;
   }
   .filter-item-btn {
     font-size: 10px;
