--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -1278,6 +1278,15 @@ body {
   height: 47px;
   border: none;
   fill: #000000;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .slide-btn:first-child {
@@ -1728,6 +1737,9 @@ body {
 }
 
 .registration {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  max-width: 1140px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1737,6 +1749,8 @@ body {
           justify-content: space-between;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
+  margin: 64px auto 96px auto;
+  padding: 0px 17px;
 }
 
 .registration-form-inputs {
@@ -2067,6 +2081,9 @@ body {
   }
   .header-brand-decor-block {
     top: -9px;
+  }
+  .registration {
+    margin: 40px auto;
   }
   .registration-info-title {
     font-size: 16px;
