additional products are taken based on the category of the selected product

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -542,6 +542,9 @@ body {
 
 .product-selected-img {
   width: 100%;
+  background-size: contain;
+  height: 510px;
+  height: 100%;
 }
 
 .products {
