--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -783,6 +783,12 @@ body {
   max-width: 360px;
 }
 
+.others-products-wrap:after {
+  content: "";
+  width: 0;
+  max-width: 0;
+}
+
 .products-pagination-wrp {
   width: 100%;
   margin: 0 0 66px 0;
@@ -2859,6 +2865,11 @@ body {
         -ms-flex-align: center;
             align-items: center;
     margin: 64px 0;
+  }
+  .others-products-wrap:after {
+    content: "";
+    width: 0;
+    max-width: 0;
   }
   .others-products-wrap > .products-item:nth-child(2) {
     margin: 30px 0 0 0;
